httpbin/istio.yml
# Copyright 2019 Simon Pasquier
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.
#
# This specification defines that the default Istio ingress gateway should
# handle traffic for httpbin.demo.example.com:80.
#
# The virtual service tells the Istio ingress gateway to forward requests
# matching the /headers and /status/* locations to the (Kubernetes)
# app.httpbin service. Requests not matching the conditions will be
# answered with 404.
#
# Note that the gateway and virtual service should be created in the same
# namespace. It can be the namespace of the application or the Istio namespace.
#
# See app.yml to deploy the httpbin application and expose it as the app.httpbin service.
#
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: httpbin-gateway
  namespace: httpbin
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - "httpbin.demo.example.com"
    port:
      name: http
      number: 80
      protocol: HTTP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
  namespace: httpbin
spec:
  hosts:
  - "httpbin.demo.example.com"
  gateways:
  - httpbin-gateway
  http:
  - match:
    - uri:
        exact: /headers
    - uri:
        prefix: /status/
    route:
    - destination:
        port:
          number: 8000
        host: app.httpbin.svc.cluster.local
